# dmm-api-py-fork

./: .gitignore  README.md  pyproject.toml
dmm-api-py-fork/: __init__.py  client.py  common.py  crawler.py
