[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmm-api-py-fork"
version = "0.1.0"
description = "Python library for interacting with the DMM API"
authors = [
    { name = "Takeru Saito", email = "takelushi@gmail.com" }
]
maintainers = [
    { name = "tbshiki", email = "tbshiki@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/tbshiki/dmm-api-py-fork"
Repository = "https://github.com/tbshiki/dmm-api-py-fork"
